--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RSVP App</title>
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <div class="wrapper">
@@ -20,7 +20,48 @@
 		
     <div class="main">	
       <h2>Invitees</h2>
-      <ul id="invitedList"></ul>	
+      <ul id="invitedList">
+        <li class="responded">
+          <span>Tuan</span>
+          <label>Confirmed<input type="checkbox" checked="true"></label>
+          <button>edit</button><button>remove</button>
+        </li>
+        <li class="responded">
+          <span>Marissa</span>
+          <label>Confirmed<input type="checkbox" checked="true"></label>
+          <button>edit</button><button>remove</button>
+        </li>
+        <li class="responded">
+          <span>Anja</span>
+          <label>Confirmed<input type="checkbox" checked="true"></label>
+          <button>edit</button><button>remove</button>
+        </li>
+        <li>
+          <span>Tammy</span>
+          <label>Confirmed<input type="checkbox"></label>
+          <button>edit</button><button>remove</button>
+        </li>
+        <li>
+          <span>Declan</span>
+          <label>Confirmed<input type="checkbox"></label>
+          <button>edit</button><button>remove</button>
+        </li>
+        <li class="responded">
+          <span>Mazie</span>
+          <label>Confirmed<input type="checkbox" checked="true"></label>
+          <button>edit</button><button>remove</button>
+        </li>
+        <li>
+          <span>Jonas</span>
+          <label>Confirmed<input type="checkbox"></label>
+          <button>edit</button><button>remove</button>
+        </li>
+        <li class="responded">
+          <span>Mohammed</span>
+          <label>Confirmed<input type="checkbox" checked="true"></label>
+          <button>edit</button><button>remove</button>
+        </li>
+      </ul>	
     </div>
   </div>
   <script type="text/javascript" src="app.js"></script>
